--- a/bibliography/bibliography.bib
+++ b/bibliography/bibliography.bib
@@ -3097,3 +3097,37 @@ url = {https://www.sciencedirect.com/science/article/pii/S0020025520301377},
 author = {Arnaud Doniec and Stéphane Lecoeuche and René Mandiau and Antoine Sylvain},
 keywords = {Agent-based modelling, Customer behaviours, Purchase intention, Stores’ simulation},
 }
+
+@article{amadoretalontodl,
+  author    = {Elvira Amador{-}Dom{\'{\i}}nguez and
+               Emilio Serrano and
+               Daniel Manrique and
+               Patrick Hohenecker and
+               Thomas Lukasiewicz},
+  title     = {An ontology-based deep learning approach for triple classification
+               with out-of-knowledge-base entities},
+  journal   = {Inf. Sci.},
+  volume    = {564},
+  pages     = {85--102},
+  year      = {2021},
+  url       = {https://doi.org/10.1016/j.ins.2021.02.018},
+  doi       = {10.1016/j.ins.2021.02.018},
+  timestamp = {Mon, 17 May 2021 17:04:39 +0200},
+  biburl    = {https://dblp.org/rec/journals/isci/Amador-Dominguez21.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{boxologyfrank,
+  author    = {Frank van Harmelen and
+               Annette ten Teije},
+  title     = {A Boxology of Design Patterns for Hybrid Learning and Reasoning Systems},
+  journal   = {CoRR},
+  volume    = {abs/1905.12389},
+  year      = {2019},
+  url       = {http://arxiv.org/abs/1905.12389},
+  eprinttype = {arXiv},
+  eprint    = {1905.12389},
+  timestamp = {Mon, 03 Jun 2019 13:42:33 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-1905-12389.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
