--- a/bibliography/bibliography.bib
+++ b/bibliography/bibliography.bib
@@ -4120,3 +4120,89 @@ doi={10.1007/BF03037089},
 url={https://doi.org/10.1007/BF03037089}
 }
 
+@techreport{noy2001ontology,
+  title={Ontology development 101{: A} guide to creating your first ontology},
+  author={Noy, Natalya F and McGuinness, Deborah L},
+  year={2001},
+  institution={Stanford Knowledge Systems Laboratory KSL-01-05 and Stanford Medical Informatics SMI-2001-0880, Stanford, CA},
+}
+
+
+@article{overview_cbr,
+author = {Aamodt, Agnar and Plaza, Enric},
+title = {Case-Based Reasoning: Foundational Issues, Methodological Variations, and System Approaches},
+year = {1994},
+issue_date = {March 1994},
+publisher = {IOS Press},
+address = {NLD},
+volume = {7},
+number = {1},
+issn = {0921-7126},
+journal = {AI Commun.},
+doi={10.3233/AIC-1994-7104},
+month = mar,
+pages = {39–59},
+numpages = {21}
+}
+
+
+@book{poole_2017_ai_foundations,
+author = {Poole, David L. and Mackworth, Alan K.},
+title = {Artificial Intelligence: Foundations of Computational Agents},
+year = {2017},
+isbn = {110719539X},
+publisher = {Cambridge University Press},
+address = {USA},
+edition = {2nd},
+abstract = {Artificial intelligence, including machine learning, has emerged as a transformational science and engineering discipline. Artificial Intelligence: Foundations of Computational Agents presents AI using a coherent framework to study the design of intelligent computational agents. By showing how the basic approaches fit into a multidimensional design space, readers learn the fundamentals without losing sight of the bigger picture. The new edition also features expanded coverage on machine learning material, as well as on the social and ethical consequences of AI and ML. The book balances theory and experiment, showing how to link them together, and develops the science of AI together with its engineering applications. Although structured as an undergraduate and graduate textbook, the book's straightforward, self-contained style will also appeal to an audience of professionals, researchers, and independent learners. The second edition is well-supported by strong pedagogical features and online resources to enhance student comprehension.}
+}
+
+@article{friedman_1997_bayesian,
+author = {Friedman, Nir and Geiger, Dan and Goldszmidt, Moises},
+title = {Bayesian Network Classifiers},
+year = {1997},
+issue_date = {Nov./Dec. 1997},
+publisher = {Kluwer Academic Publishers},
+address = {USA},
+volume = {29},
+number = {2–3},
+issn = {0885-6125},
+url = {https://doi.org/10.1023/A:1007465528199},
+doi = {10.1023/A:1007465528199},
+abstract = {Recent work in supervised learning has shown that a surprisingly
+simple Bayesian classifier with strong assumptions of independence among
+features, called naive Bayes, is competitive with
+state-of-the-art classifiers such as C4.5. This fact raises the question of
+whether a classifier with less restrictive assumptions can perform even
+better. In this paper we evaluate approaches for inducing classifiers from
+data, based on the theory of learning Bayesian networks. These networks are factored representations of
+probability distributions that generalize the naive Bayesian classifier and
+explicitly represent statements about independence. Among these approaches
+we single out a method we call Tree Augmented Naive Bayes (TAN), which outperforms naive Bayes, yet at the same time
+maintains the computational simplicity (no search involved) and robustness
+that characterize naive Bayes. We experimentally tested these approaches,
+using problems from the University of California at Irvine repository, and 
+compared them to C4.5, naive Bayes, and wrapper methods for feature
+selection.},
+journal = {Mach. Learn.},
+month = {nov},
+pages = {131–163},
+numpages = {33},
+keywords = {classification, Bayesian networks}
+}
+
+@incollection{GALVAN2003573,
+title = {Parallel Evolutionary Computation for Solving Complex CFD Optimization Problems : A Review and Some Nozzle Applications},
+editor = {K. Matsuno and A. Ecer and N. Satofuka and J. Periaux and P. Fox},
+booktitle = {Parallel Computational Fluid Dynamics 2002},
+publisher = {North-Holland},
+address = {Amsterdam},
+pages = {573-604},
+year = {2003},
+isbn = {978-0-444-50680-1},
+doi = {https://doi.org/10.1016/B978-044450680-1/50072-3},
+url = {https://www.sciencedirect.com/science/article/pii/B9780444506801500723},
+author = {B. Galvan and Greiner D. and Périaux J. and M. Sefrioui and G. Winter},
+keywords = {Evolutionary Algorithms, Nozzle flows, Aerodynamic Shape Design Optimisation, Hierarchical Parallel Evolutionary Algorithms, Multi objective, Game Theory, Pareto Front and Nash Equilbrium},
+abstract = {This paper attempts to present a summarized survey in the field of Parallel Evolutionary Algorithms (PEAs), trying to highlight the most relevent aspects in the design and implementation of each class of PEAs. A review of the most advanced research activities on this field is presented. New tools for new challenges of Industry and Society, which are definitely multi criteria oriented and CFD dominant in the applications, are investigated and a series of simple nozzle shape optimization problems with their methodologies and associated results – including Hierarchy and Game Theory - are discussed. Data resulting from evolutionary optimization, which have been collected in the database of a European Thematic Network named INGEnet are presented as a road map to Multidisciplinary Design Optimisation.}
+}
